<resources>
    <string name="app_name">交大事务通</string>
    <string name="app_prompt">提示</string>
    <string name="app_ok">确认</string>
    <string name="app_cancel">取消</string>
    <string name="app_modify">修改</string>
    <string name="app_logout_confirm">确定要退出流量地图吗？</string>
    <string name="app_data_load_wrong">数据加载失败，请重试！</string>
    <string name="app_double_exit">再按一次退出程序！</string>
    <string name="app_submit">提 交</string>
    <string name="app_enter">立即体验</string>
    <string name="app_android">Module_Android</string>
    <string name="app_service_protocol">服务协议</string>
    <string name="operator_fail">操作失败</string>

    <string name="register_verifycode_prompt">请输入验证码</string>
    <string name="mine_exit">退出</string>
    <string name="login_account_prompt">请输入帐号</string>
    <string name="login_phone_prompt">请输入手机号码</string>
    <string name="login_correct_phone">请正确输入11位手机号码</string>
    <string name="login_password_prompt">请输入密码</string>
    <string name="login_newpassword_prompt">请输入新密码</string>
    <string name="login_button">登录</string>
    <string name="logout_button">退出流量地图</string>
    <string name="logout_prompt">确定要注销？</string>
    <string name="logout_success">注销成功</string>
    <string name="login_dialog_loading">登录中...</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failure">登录失败！请重新登录！</string>

    <string name="modify_oldpwd_prompt">请输入旧密码</string>
    <string name="modify_newpwd_prompt">请输入新密码</string>
    <string name="modify_pwd_success">密码修改成功！</string>
    <string name="modify_pwd_failure">密码修改失败！</string>

    <string name="user_center">我的帐号</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="toast_setting">提醒设置</string>
    <string name="main_menu_exit">退出程序</string>
    <string name="main_menu_cache_clear_confirm">缓存文件可以用来帮助您节省流量，但较大时会占用较多磁盘空间。\n确定开始清理吗？</string>
    <string name="app_reg">注册</string>
    <string name="zh_return">返回</string>
    <string name="data_loading">数据加载中...</string>

    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_message">短信验证码登录</string>

    <string name="activity_user_info">个人信息</string>
    <string name="user_info_nickname_prompt">昵称</string>
    <string name="user_info_nickname_modify">修改昵称</string>
    <string name="user_info_realname">真实姓名</string>
    <string name="user_info_realname_prompt">请输入真实姓名</string>
    <string name="user_info_nickname_title">请输入昵称</string>
    <string name="user_info_realname_title">请输入真实姓名</string>
    <string name="user_info_gender_title">请选择性别</string>
    <string name="img_load_title">请选择加载模式</string>
    <string name="auto_img_load">智能模式</string>
    <string name="high_img_load">高质量(适合wifi环境)</string>
    <string name="normal_img_load">普通(适合2G/3G/4G环境)</string>
    <string name="user_info_gender_male">男</string>
    <string name="user_info_gender_female">女</string>
    <string name="user_update_success">信息修改成功！</string>
    <string name="user_update_failure">信息修改失败！</string>

    <string name="setting_head_title">系统设置</string>
    <string name="system_push_start_time">推送开始时间</string>
    <string name="system_push_end_time">推送结束时间</string>


    <string name="left_fragment_setting">系统设置</string>
    <string name="left_fragment_feedback">意见反馈</string>
    <string name="left_fragment_update">系统更新</string>
    <string name="left_fragment_aboutus">关于我们</string>
    <string name="modify_info">修改证件信息</string>
    <string name="info_detail">消息详情</string>
    <string name="mine_account_manage">账户管理</string>
    <string name="mine_user_info">个人信息</string>
    <string name="mine_password_modify">密码修改</string>
    <string name="mine_setting">设置</string>
    <!--以下是反馈-->
    <string name="mine_feedback">意见反馈</string>
    <string name="activity_feedback_prompt">如果您对我们软件有什么意见或建议，都可以写下来反馈给我们哦！</string>
    <string name="activity_feedback">提交反馈</string>
    <string name="activity_forget_password">忘记密码</string>
    <string name="activity_register">帐号注册</string>
    <string name="activity_register_reg">注册</string>
    <string name="activity_register_get">获取</string>
    <string name="activity_registing">注册中....</string>
    <string name="search_over">完成</string>
    <string name="cart_refresh">刷新</string>
    <string name="collect_all">全部</string>
    <string name="app_feedback_prompt">亲！意见反馈内容不能为空哦！</string>
    <string name="app_feedback_fail">意见反馈失败，请重试...</string>
    <string name="app_feedback_success">亲！谢谢您的反馈！</string>
    <!--以下是注册-->
    <string name="code_login">验证并登陆</string>
    <string name="get_code">获取验证码</string>
    <string name="reg_success">注册成功</string>

    <!--账号详情-->
    <string name="accout_level">等级</string>
    <string name="head_portrait">头像</string>
    <string name="sex">性别</string>
    <string name="edit_pad">修改密码</string>
    <string name="tel_num">手机号</string>
    <string name="qr_code_scan">二维码扫描</string>

    <string name="help_center">帮助中心</string>
    <string name="feed_back">意见反馈</string>
    <string name="no_login">未登陆</string>
    <string name="app_push">推送设置</string>
    <string name="add_new_message">新建信息</string>
    <string name="select_constact">请选择联系人</string>
    <string name="info_info">消息</string>
    <string name="costant_person">联系人</string>
    <string name="my_collection_info">我收藏的信息</string>
    <string name="my_sign_in_info">我标记的信息</string>
    <string name="my_info">我的信息</string>
    <string name="please_wait">请等待</string>
</resources>
