<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:background="@drawable/login_text_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_old_pwd"
            style="@style/edit_style"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="@dimen/space_10"
            android:hint="@string/modify_oldpwd_prompt"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/theme_black"
            android:textColorHint="@color/login_edit_color" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/login_new_pwd"
                style="@style/edit_style"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/login_newpassword_prompt"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/theme_black"
                android:textColorHint="@color/login_edit_color" />

            <CheckBox
                android:id="@+id/password_checkbox"
                style="@style/checkbox_password"
                android:layout_width="@dimen/checkbox_switch_width"
                android:layout_height="@dimen/checkbox_show_hide_pwd_height"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/space_8"
                android:layout_marginTop="@dimen/space_10"
                android:layout_weight="1" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_modify_pwd"
        style="@style/login_button"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/space_15"
        android:background="@drawable/btn_global_red"
        android:text="@string/app_modify" />
</LinearLayout>
