<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:background="@drawable/login_text_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_username"
            style="@style/edit_style"
            android:drawableLeft="@drawable/login_icon_account"
            android:drawablePadding="@dimen/space_10"
            android:hint="请输入账号"
            android:maxLength="30"
            android:inputType="number"
            android:textColor="@color/theme_black"
            android:textColorHint="@color/login_edit_color" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_edit_color"></View>

        <EditText
            android:id="@+id/login_password"
            style="@style/edit_style"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="@dimen/space_10"
            android:hint="@string/login_password_prompt"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/theme_black"
            android:textColorHint="@color/login_edit_color" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_edit_color"></View>
        <EditText
            android:id="@+id/login_name"
            style="@style/edit_style"

            android:drawablePadding="@dimen/space_10"
            android:hint="请输入姓名"
            android:maxLength="20"
            android:textColor="@color/theme_black"
            android:textColorHint="@color/login_edit_color" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_edit_color"></View>

        <EditText
            android:id="@+id/login_phone"
            style="@style/edit_style"

            android:drawablePadding="@dimen/space_10"
            android:hint="请输入手机号"
            android:maxLength="13"
            android:inputType="number"
            android:textColor="@color/theme_black"
            android:textColorHint="@color/login_edit_color" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_edit_color"></View>
        <Spinner
            android:layout_marginLeft="@dimen/text_size_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/college_spinner"
            android:entries="@array/college"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_edit_color"></View>
        <Spinner
            android:layout_marginLeft="@dimen/text_size_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/position_spinner"
            android:entries="@array/position"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_edit_color"></View>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/v_code"
                style="@style/edit_style"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/register_verifycode_prompt"
                android:maxLength="30"
                android:textColor="@color/theme_black"
                android:textColorHint="@color/login_edit_color" />

            <Button
                android:id="@+id/get_reg_code"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/register_btn_blue"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_reg"
        style="@style/login_button"
        android:layout_margin="@dimen/space_15"
        android:background="@drawable/btn_global_red"
        android:text="@string/app_reg" />

</LinearLayout>
