<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/login_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_18"
            android:background="@drawable/login_text_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                style="@style/edit_style"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="@dimen/space_10"
                android:hint="请输入账号"
                android:maxLength="30"
                android:inputType="number"
                android:textColor="@color/theme_black"
                android:textColorHint="@color/login_edit_color" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/login_edit_color"></View>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    style="@style/edit_style"
                    android:drawableLeft="@drawable/login_icon_password"
                    android:drawablePadding="@dimen/space_10"
                    android:hint="@string/login_password_prompt"
                    android:inputType="textPassword"
                    android:textColor="@color/theme_black"
                    android:textColorHint="@color/login_edit_color" />

                <CheckBox
                    android:id="@+id/password_checkbox"
                    style="@style/checkbox_password"
                    android:layout_width="@dimen/checkbox_show_hide_pwd_width"
                    android:layout_height="@dimen/checkbox_show_hide_pwd_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/login_button"
            android:background="@drawable/btn_global_red"
            android:text="@string/login_button" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/space_15"
                android:background="@null"
                android:paddingBottom="@dimen/space_10"
                android:paddingTop="@dimen/space_10"
                android:text="注册"
                android:textColor="@color/home_top"
                android:textSize="@dimen/text_size_16"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/space_10"
                android:background="@null"
                android:paddingBottom="@dimen/space_10"
                android:paddingTop="@dimen/space_10"
                android:text="@string/login_message"
                android:textColor="@color/home_top"
                android:textSize="@dimen/text_size_16"
                android:visibility="gone" />
        </RelativeLayout>
        <CheckBox
            android:id="@+id/cb_rember"
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginLeft="@dimen/space_5"
            android:textColor="@color/black"
            android:text="是否记住密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
